--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "homepage": "https://github.com/d62remi/MeteorDesktopApp",
   "dependencies": {
+    "colors": "^1.1.2",
     "commander": "^2.8.1",
     "nw-builder": "^2.0.2",
-    "optimist": "^0.6.1",
     "readline-sync": "^1.2.21"
   }
 }
