--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.1.2",
     "commander": "^2.8.1",
     "nw-builder": "^2.0.2",
-    "readline-sync": "^1.2.21"
+    "readline-sync": "^1.2.21",
+    "underscore": "^1.8.3"
   }
 }
